--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ section[data-testid='stSidebar'] {
         z-index: 1;
         top: 0;
         left: 0;
-        background-color: #111;
+        background-color: black;
         overflow-x: hidden;
         transition: 0.5s ease;
         padding-top: 60px;
