--- a/style.css
+++ b/style.css
@@ -1,23 +1,25 @@
 section[data-testid='stSidebar'] {
     background-color: black;
     flex-shrink: unset !important;
-    
 }
 
-footer {
-        visibility: hidden;
-    }
-
-
-@media(hover:hover) and (min-width: 600px) and (max-width: 769px){
-
+/* Phone screens: up to 600px */
+@media (max-width: 600px) {
     header[data-testid="stHeader"] {
-        display:none;
+        display: none;
+    }
+    /* If you want to adjust sidebar on phone screens, add additional styles here */
+}
+
+/* For devices between 600px and 769px */
+@media(hover:hover) and (min-width: 600px) and (max-width: 769px) {
+    header[data-testid="stHeader"] {
+        display: none;
     }
 
     section[data-testid='stSidebar'] {
         height: 100%;
-        min-width:95px !important;
+        min-width: 95px !important;
         width: 95px !important;
         margin-left: 305px;
         position: relative;
@@ -31,36 +33,30 @@ footer {
         white-space: nowrap;
     }
 
-    section[data-testid='stSidebar']:hover{
+    section[data-testid='stSidebar']:hover {
         min-width: 330px !important;
-        }
+    }
 
     button[kind="header"] {
         display: none;
     }
 
-    div[data-testid="collapsedControl"]{
-        display: none;
-    }
-
-}
-@media (max-width: 600px) {
-    header[data-testid="stHeader"] {
+    div[data-testid="collapsedControl"] {
         display: none;
     }
 }
 
-@media(hover: hover) and (min-width: 769px){
-
+/* For devices with a minimum width of 769px */
+@media(hover: hover) and (min-width: 769px) {
     header[data-testid="stHeader"] {
-        display:none;
+        display: none;
     }
 
     section[data-testid='stSidebar'] {
         height: 100%;
-        min-width:95px !important;
+        min-width: 95px !important;
         width: 95px !important;
-        transform:translateX(0px);
+        transform: translateX(0px);
         position: relative;
         z-index: 1;
         top: 0;
@@ -72,15 +68,15 @@ footer {
         white-space: nowrap;
     }
 
-    section[data-testid='stSidebar']:hover{
+    section[data-testid='stSidebar']:hover {
         min-width: 330px !important;
-        }
+    }
 
     button[kind="header"] {
         display: none;
     }
 
-    div[data-testid="collapsedControl"]{
+    div[data-testid="collapsedControl"] {
         display: none;
     }
 }
